# aws-serverless-airline-booking

./: .editorconfig  .env  .esdoc.json  .eslintignore  .eslintrc.js  .gitignore  .graphqlconfig.yml  Booking.java  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  amplify.yml  cm.txt  jsconfig.json  package-lock.json  package.json  quasar.conf.js  sample-queries-mutations.gql  test.json  vue.config.js
.github/workflows/: codeql.yml  frontend_build.yml
amplify/: cli.json  team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
docs/: decision_log.md  getting_started.md
docs/handouts/: booking.md  catalog.md  loyalty.md  payments.md
public/: index.html
public/mocks/: bookings.json  flights.json  loyalty.json
src/: .esdoc.json  .eslintrc.js  index.template.html  jest.config.js  main.js  package-lock.json  package.json  router.js  store.js  vue.config.js
src/backend/: schema.graphql
src/backend/loyalty/: .editorconfig  .env  .eslintrc  Makefile  README.md  architecture.drawio  jest.config.js  local-env-vars.json  mypy.ini  p.yaml  package-lock.json  package.json  pyproject.toml  template.yaml  tsconfig.json  webpack.config.js
src/backend/loyalty/ingest/: app.py
src/backend/loyalty/loyalty/aggregate/: __init__.py  app.py  tier.py
src/backend/loyalty/loyalty/get/: __init__.py  app.py
src/backend/loyalty/loyalty/ingest/: __init__.py  app.py
src/backend/loyalty/loyalty/shared/: constants.py  functions.py  models.py  storage.py
src/backend/loyalty/src/create/: env.json  event.json  index.ts  package-lock.json  package.json  tsconfig.json
src/backend/loyalty/src/get/: app.py  env.json  event.json  get.ts  index.ts  package.json
src/backend/loyalty/src/get/lib/: document_client.ts
src/backend/loyalty/src/ingest/: app.py  env.json  event.json  index.ts  ingest.test.ts  ingest.ts  package.json
src/backend/loyalty/src/ingest/lib/: document_client.ts
src/backend/loyalty/src/loyalty/aggregate/: __init__.py  app.py
src/backend/loyalty/src/loyalty/get/: __init__.py
src/backend/loyalty/src/loyalty/ingest/: __init__.py  app.py
src/backend/loyalty/src/loyalty/shared/: functions.py  models.py  storage.py
src/backend/loyalty/tests/: conftest.py  get.test.ts  ingest.test.ts  integration.test.ts  utils.py
src/backend/loyalty/tests/e2e/: test_scenarios.py
src/backend/loyalty/tests/events/: aggregate_insert_event.json  get_event.json  ingest_event.json
src/backend/loyalty/tests/functional/: test_get_loyalty_points.py  test_ingest.py
src/backend/loyalty/tests/helpers/: credentials-helper.ts  dynamodb-helper.ts  timeout-helper.ts
src/backend/loyalty/tests/integ/: test_dynamodb_storage.py
src/backend/loyalty/tests/storage/: test_dynamodb.py
src/backend/loyalty/tests/unit/: test_aggregate.py  test_dynamodb_storage.py  test_get_loyalty_points.py  test_ingest.py  test_storage.py
src/backend/payment/: .coveragerc  Makefile  Pipfile  README.md  local-env-vars.json  pyproject.toml  template.yaml
src/backend/payment/src/collect-payment/: collect.py  event.json  requirements.txt
src/backend/payment/src/refund-payment/: refund.py  requirements.txt
src/boot/: amplify.js  config.js
src/components/: BookingCard.vue  BookingFlight.vue  FlightCard.vue  FlightLoader.vue  FlightToolbar.vue  FlightToolbarFilters.vue
src/css/: app.sass
src/e2e-tests/: docker-compose.yaml  package-lock.json  package.json  tsconfig.json
src/frontend/: .env  .esdoc.json  .eslintrc.js  .prettierignore  .prettierrc  App.vue  README.md  aws-exports.js  babel.config.js  (+8 more)
stacks/: compute.yaml  resources.yaml
(+303 files in other folders)
