[tool.poetry]
name = "loyalty"
version = "0.1.0"
description = "Loyalty service"
authors = ["heitorlessa <lessa@amazon.nl>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
boto3-stubs = {extras = ["all"], version = "^1.18.31"}
black = "^21.7b0"
isort = "^5.9.3"
aws-lambda-powertools = "^1.20.1"
cyksuid = "^1.1.0"
pyright = "^0.0.9"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | example
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

