[tool.poetry]
name = "loyalty"
version = "0.1.0"
description = "Loyalty service"
authors = ["heitorlessa <lessa@amazon.nl>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
boto3-stubs = {extras = ["all"], version = "^1.18.31"}
black = "^21.7b0"
isort = "^5.9.3"
aws-lambda-powertools = "^1.20.1"
cyksuid = "^1.1.0"
boto3 = "^1.18.41"
flake8-black = "^0.2.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.6.1"
flake8-debugger = "^4.0.0"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.0.0"
flake8-variables-names = "^0.0.4"
mypy = "^0.910"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | example
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv"
testpaths = "./tests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

